# fileops

./: .gitignore  CHANGELOG.md  EDIT_OP_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
fileops/: __init__.py
fileops/api/: main.py
fileops/cli/: main.py
fileops/core/: __init__.py  differ.py  exceptions.py  executor.py  models.py  parser.py
tests/: test_api.py  test_binary.py  test_bugs.py  test_cli.py  test_durability_safety.py  test_edit.py  test_executor.py  test_hardening.py  test_parser.py
