[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileops"
version = "0.2.0"
description = "Atomic batch file operations for AI agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
cli = ["click>=8.1"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
yaml = ["pyyaml>=6.0"]
all = ["fileops[cli,api,yaml]"]
dev = ["ruff>=0.4"]

[project.scripts]
fileops = "fileops.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fileops*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
